chore: fix typo at `DAY 5 - 2022-01-05.md`

--- a/daily-development-logs/2022-01-05/DAY 5 - 2022-01-05.md
+++ b/daily-development-logs/2022-01-05/DAY 5 - 2022-01-05.md
@@ -320,7 +320,7 @@ export const signing = (UUID) => sign({ UUID });
 
 ### Simplify the authorization process with passport
 
-두 번째로는 인증/인가 라이브러리인 `[passport](http://www.passportjs.org/packages/passport-jwt/)` 사용이다. 그 중에서도 `jsonwebtoken` 을 사용하는 만큼, `passport-jwt` 를 사용하고자 한다. 그 이유는 코드베이스의 간략함 때문이다. authentication 과정에서 다양한 경우를 처리하지 않는다는 가정 하에, 별 다른 처리 없이 사용자의 authentication 만을 진행할 거라면 코드의 양을 일단은 줄여보자는 생각이 들었다. 코드가 적어질 수록, 버그도 적어지기에, 꼭 필요한 게 아니라면 신뢰도가 높은 라이브러리 등으로 코드를 줄이자는 주의이기에 passport 를 사용하기로 했다. 
+두 번째로는 인증/인가 라이브러리인 [passport](http://www.passportjs.org/packages/passport-jwt/) 사용이다. 그 중에서도 `jsonwebtoken` 을 사용하는 만큼, `passport-jwt` 를 사용하고자 한다. 그 이유는 코드베이스의 간략함 때문이다. authentication 과정에서 다양한 경우를 처리하지 않는다는 가정 하에, 별 다른 처리 없이 사용자의 authentication 만을 진행할 거라면 코드의 양을 일단은 줄여보자는 생각이 들었다. 코드가 적어질 수록, 버그도 적어지기에, 꼭 필요한 게 아니라면 신뢰도가 높은 라이브러리 등으로 코드를 줄이자는 주의이기에 passport 를 사용하기로 했다. 
 
 ---
 
