chore: update notion table image

--- a/daily-development-logs/2022-01-08/DAY 8 - 2022-01-08.md
+++ b/daily-development-logs/2022-01-08/DAY 8 - 2022-01-08.md
@@ -188,7 +188,9 @@
 
 위의 요구사항 재분석을 통해서 더 필요한 부분이 무엇인지를 정리해보았다.
 
-정리한 내용은 [notion 의 표 기능](https://www.notion.so/7c7fa58e149a44658b0cc5e3db28f0c0) 을 통해서 
+![notion-table-example.png](./assets/notion-table-example.png)
+
+정리한 내용은 notion 의 표 기능을 통해서 
 - 문제의 이름 
 - 대분류 
 - 소분류 
